--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 
         <title>SASS Tutorial</title>
     </head>
-    <body></body>
+    <body>
+        <div class="main">
+            <p class="main__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                numquam consequatur iure eum repellat quibusdam, quasi, vel ut
+                ea ex ad velit, veritatis sit. Ullam quae hic ipsam numquam
+                aliquid?
+            </p>
+        </div>
+    </body>
 </html>
