--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 ea ex ad velit, veritatis sit. Ullam quae hic ipsam numquam
                 aliquid?
             </p>
+            <p class="main__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                numquam consequatur iure eum repellat quibusdam, quasi, vel ut
+                ea ex ad velit, veritatis sit. Ullam quae hic ipsam numquam
+                aliquid?
+            </p>
         </div>
     </body>
 </html>
