--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <title>SASS Tutorial</title>
     </head>
-    <body>
+    <body class="light">
         <div class="main">
             <p class="main__paragraph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
