--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     </head>
     <body class="light">
         <div class="main">
-            <p class="main__paragraph">
+            <p class="main__paragraph1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
                 numquam consequatur iure eum repellat quibusdam, quasi, vel ut
                 ea ex ad velit, veritatis sit. Ullam quae hic ipsam numquam
                 aliquid?
             </p>
-            <p class="main__paragraph">
+            <p class="main__paragraph2">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
                 numquam consequatur iure eum repellat quibusdam, quasi, vel ut
                 ea ex ad velit, veritatis sit. Ullam quae hic ipsam numquam
