--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </section>
         </main>
 
+        <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
