Building _about.scss

--- a/about.html
+++ b/about.html
@@ -40,13 +40,15 @@
         <main>
             <section class="about">
                 <div class="about__bio-image">
-                    <h2 class="text-secondary">BIO</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Ex veritatis dolor asperiores eos, nemo, quis ipsa dicta
-                        eum nam vero amet modi tenetur sapiente enim eaque rem
-                        totam dolorum nesciunt!
-                    </p>
+                    <div class="about__bio">
+                        <h2 class="text-secondary">BIO</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Ex veritatis dolor asperiores eos, nemo, quis
+                            ipsa dicta eum nam vero amet modi tenetur sapiente
+                            enim eaque rem totam dolorum nesciunt!
+                        </p>
+                    </div>
                 </div>
 
                 <div class="jobs">
